--- a/importExcelTest/infoForm.resx
+++ b/importExcelTest/infoForm.resx
@@ -117,38 +117,105 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="listBox1.Items" xml:space="preserve">
-    <value>These license terms are an agreement between Microsoft Corporation (or based on where you live, one of its affiliates) and you. Please read them. They apply to the software named above, which includes the media on which you received it, if any. The terms also apply to any Microsoft</value>
-  </data>
-  <data name="listBox1.Items1" xml:space="preserve">
-    <value>a. Distributable Software. You are permitted to distribute the software in programs you develop if you comply with the terms below. The software (including the sample code) is “Distributable Software.”</value>
-  </data>
-  <data name="listBox1.Items2" xml:space="preserve">
-    <value>· Third Party Distribution. You may permit distributors of your programs to copy and distribute the Distributable Software as part of those programs. iii . Distribution Requirements. For any Distributable Software you distribute, you must</value>
-  </data>
-  <data name="listBox1.Items3" xml:space="preserve">
-    <value>· modify or distribute the source code of any Distributable Software so that any part of it becomes subject to an Excluded License. An Excluded License is one that requires, as a condition of use, modification or distribution, that</value>
-  </data>
-  <data name="listBox1.Items4" xml:space="preserve">
-    <value>1.Scope of License. The software is licensed, not sold. This agreement only gives you some rights to use the software. Microsoft reserves all other rights. Unless applicable law gives you more rights despite this limitation, you may use the software only as expressly permitted in this agreement. In doing so, you must comply with any technical limitations in the software that only allow you to use it in certain ways. You may not</value>
-  </data>
-  <data name="listBox1.Items5" xml:space="preserve">
-    <value>3.Export Restrictions. The software is subject to United States export laws and regulations. You must comply with all domestic and international export laws and regulations that apply to the software. These laws include restrictions on destinations, end users and end use. For additional information, see www.microsoft.com/exporting.</value>
-  </data>
-  <data name="listBox1.Items6" xml:space="preserve">
-    <value>a. United States. If you acquired the software in the United States, Washington state law governs the interpretation of this agreement and applies to claims for breach of it, regardless of conflict of laws principles. The laws of the state where you live govern all other claims, including claims under state consumer protection laws, unfair competition laws, and in tort.</value>
-  </data>
-  <data name="listBox1.Items7" xml:space="preserve">
-    <value>1.Legal Effect. This agreement describes certain legal rights. You may have other rights under the laws of your country. You may also have rights with respect to the party from whom you acquired the software. This agreement does not change your rights under the laws of your country if the laws of your country do not permit it to do so.</value>
-  </data>
-  <data name="listBox1.Items8" xml:space="preserve">
-    <value>2.Disclaimer of Warranty. The software is licensed “as-is.” You bear the risk of using it. Microsoft gives no express warranties, guarantees or conditions. You may have additional consumer rights under your local laws which this agreement cannot change. To the extent permitted under your local laws, Microsoft excludes the implied warranties of merchantability, fitness for a particular purpose and non-infringement.</value>
-  </data>
-  <data name="listBox1.Items9" xml:space="preserve">
-    <value>3.Limitation on and Exclusion of Remedies and Damages. You can recover from Microsoft and its suppliers only direct damages up to U.S. $5.00. You cannot recover any other damages, including consequential, lost profits, special, indirect or incidental damages. This limitation applies to</value>
-  </data>
-  <data name="listBox1.Items10" xml:space="preserve">
-    <value>· claims for breach of contract, breach of warranty, guarantee or condition, strict liability, negligence, or other tort to the extent permitted by applicable law. It also applies even if Microsoft knew or should have known about the possibility of the damages</value>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>NEGAR SOFTWARE 
+
+. copyright (c) 2017-2018  Amirhosein Lessani 
+. ordered by Guilan SSAA organization
+. Contact Customer Service
+  xenups@outlook.com
+
+LICENSE TERMS:
+OPEN XML SDK 2.0 FOR MICROSOFT OFFICE
+These license terms are an agreement between Microsoft Corporation (or based on where you live, one of its affiliates) and you. 
+Please read them. They apply to the software named above, which includes the media on which you received it, if any. The terms also apply to any Microsoft
+· updates,
+· supplements,
+· Internet-based services, and
+· support services
+for this software, unless other terms accompany those items. If so, those terms apply. BY USING THE SOFTWARE, YOU ACCEPT THESE TERMS.
+ IF YOU DO NOT ACCEPT THEM, DO NOT USE THE SOFTWARE.
+If you comply with these license terms, you have the rights below.
+1.INSTALLATION AND USE RIGHTS. You may install and use any number of copies of the software on your devices.
+2.ADDITIONAL LICENSING REQUIREMENTS AND/OR USE RIGHTS.
+a. Distributable Software. You are permitted to distribute the software in programs you develop if you comply with the terms below. The software (including the sample code) is “Distributable Software.”
+i. Right to Modify Code
+· Sample Code. You may modify, copy, and distribute the source and object code form of code marked as “sample.”
+ii. Third Party Distribution
+· Third Party Distribution. You may permit distributors of your programs to copy and distribute the Distributable Software as part of those programs. iii . Distribution Requirements. For any Distributable Software you distribute,
+ you must
+· add significant primary functionality to it in your programs;
+· require distributors and external end users to agree to terms that protect it at least as much as this agreement;
+· display your valid copyright notice on your programs; and
+· indemnify, defend, and hold harmless Microsoft from any claims, including attorneys’ fees, related to the distribution or use of your programs.
+iv . Distribution Restrictions. You may not
+· alter any copyright, trademark or patent notice in the Distributable Software;
+· use Microsoft’s trademarks in your programs’ names or in a way that suggests your programs come from or are endorsed by Microsoft;
+· include Distributable Software in malicious, deceptive or unlawful programs; or
+· modify or distribute the source code of any Distributable Software so that any part of it becomes subject to an Excluded License. An Excluded License is one that requires, as a condition of use, modification or distribution
+, that
+· the code be disclosed or distributed in source code form; or
+· others have the right to modify it.
+1.Scope of License. The software is licensed, not sold. This agreement only gives you some rights to use the software. Microsoft reserves all other rights. Unless applicable law gives you more rights despite this limitation
+, you may use the software only as expressly permitted in this agreement. In doing so, you must comply with any technical limitations in the software that only allow you to use it in certain ways. You may not
+· work around any technical limitations in the software;
+· reverse engineer, decompile or disassemble the software, except and only to the extent that applicable law expressly permits, despite this limitation;
+· make more copies of the software than specified in this agreement or allowed by applicable law, despite this limitation;
+· publish the software for others to copy;
+· rent, lease or lend the software;
+· transfer the software or this agreement to any third party; or
+· use the software for commercial software hosting services.
+1.DOCUMENTATION. Any person that has valid access to your computer or internal network may copy and use the documentation for your internal, reference purposes.
+2.TRANSFER TO ANOTHER DEVICE. You may uninstall the software and install it on another device for your use. You may not do so to share this license between devices.
+3.Export Restrictions. The software is subject to United States export laws and regulations. You must comply with all domestic and international export laws and regulations that apply to the software.
+ These laws include restrictions on destinations, end users and end use. For additional information, see www.microsoft.com/exporting.
+4.SUPPORT SERVICES. Because this software is “as is,” we may not provide support services for it.
+5.Entire Agreement. This agreement, and the terms for supplements, updates, Internet-based services and support services that you use, are the entire agreement for the software and support services.
+6.Applicable Law.
+a. United States. If you acquired the software in the United States, Washington state law governs the interpretation of this agreement and applies to claims for breach of it, regardless of conflict of laws principles. 
+The laws of the state where you live govern all other claims, including claims under state consumer protection laws, unfair competition laws, and in tort.
+b. Outside the United States. If you acquired the software in any other country, the laws of that country apply.
+1.Legal Effect. This agreement describes certain legal rights. You may have other rights under the laws of your country. You may also have rights with respect to the party from whom you acquired the software.
+ This agreement does not change your rights under the laws of your country if the laws of your country do not permit it to do so.
+2.Disclaimer of Warranty. The software is licensed “as-is.” You bear the risk of using it. Microsoft gives no express warranties, guarantees or conditions. You may have additional consumer rights under your local laws which 
+this agreement cannot change. To the extent permitted under your local laws, Microsoft excludes the implied warranties of merchantability, fitness for a particular purpose and non-infringement.
+3.Limitation on and Exclusion of Remedies and Damages. You can recover from Microsoft and its suppliers only direct damages up to U.S. $5.00. You cannot recover any other damages, including consequential, lost profits, 
+special, indirect or incidental damages. This limitation applies to
+· anything related to the software, services, content (including code) on third party Internet sites, or third party programs; and
+· claims for breach of contract, breach of warranty, guarantee or condition, strict liability, negligence, or other tort to the extent permitted by applicable law. It also applies even if Microsoft knew or should have known 
+about the possibility of the damages
+. The above limitation or exclusion may not apply to you because your country may not allow the exclusion or limitation of incidental, consequential or other damages.
+
+LINQTOEXCEL  LICENSE TERMS
+copyright (c) 2008-2010 Paul Yoder
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+
+  (c) www.mikesknowledgebase.com 2014 
+ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files 
+(the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, 
+publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, 
+subject to the following conditions:
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE 
+ FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION 
+WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
